Open API Spec 적용